@@ -232,14 +232,8 @@ class Gravity_Flow_Inbox {
 		if ( array_key_exists( 'step_highlight', $columns ) && isset( $entry['workflow_step'] ) ) {
 			$step = gravity_flow()->get_step( $entry['workflow_step'] );
 			if ( $step ) {
-				$meta = $step->get_feed_meta();
-
-				if ( $meta && isset( $meta['step_highlight'] ) && $meta['step_highlight'] ) {
-					if ( isset( $meta['step_highlight_type'] ) && $meta['step_highlight_type'] == 'color' ) {
-						if ( isset( $meta['step_highlight_color'] ) && preg_match( '/^#[a-f0-9]{6}$/i', $meta['step_highlight_color'] ) ) {
-							$step_highlight_color = $meta['step_highlight_color'];
-						}
-					}
+				if ( $step->step_highlight && $step->step_highlight_type == 'color' && preg_match( '/^#[a-f0-9]{6}$/i', $step->step_highlight_color ) ) {
+					$step_highlight_color = $step->step_highlight_color;
 				}
 			}
 		}
@@ -248,12 +242,8 @@ class Gravity_Flow_Inbox {
 		if ( isset( $entry['workflow_step'] ) ) {
 			$step = gravity_flow()->get_step( $entry['workflow_step'] );
 			if ( $step ) {
-				$meta = $step->get_feed_meta();
-
-				if ( $meta && isset( $meta['due_date_highlight_type'] ) && $meta['due_date_highlight_type'] == 'color' ) {
-					if ( isset( $meta['due_date_highlight_color'] ) && preg_match( '/^#[a-f0-9]{6}$/i', $meta['due_date_highlight_color'] ) ) {
-						$due_date_highlight_color = $meta['due_date_highlight_color'];
-					}
+				if ( $step->due_date && $step->due_date_highlight_type == 'color' && preg_match( '/^#[a-f0-9]{6}$/i', $step->due_date_highlight_color ) ) {
+					$due_date_highlight_color = $step->due_date_highlight_color;
 				}
 			}
 		}
@@ -360,7 +350,7 @@ class Gravity_Flow_Inbox {
 			case 'due_date':
 				$api = new Gravity_Flow_API( $form['id'] );
 				$step = $api->get_current_step( $entry );
-				if ( $step ) {
+				if ( $step && $step->due_date ) {
 					$value = Gravity_Flow_Common::format_date( date( 'Y-m-d H:i:s', $step->get_due_date_timestamp() ), '', true, false );
 				}
 				break;
